cmake_minimum_required(VERSION 2.8.3)
project(mobot_with_plugin)

#Nothing to compile here!

## Find catkin macros and libraries
## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
## is used, also find other catkin packages
#find_package(catkin REQUIRED COMPONENTS
#  roscpp
#  rospy
#)

catkin_package()
