<?xml version="1.0"?>
<package>
  <name>mobot_with_plugin</name>
  <version>0.0.1</version>
  <description>A version of one of the mobot launch files that invokes my plugin instead of the default.</description>

  <maintainer email="tes77@case.edu">Tom Shkurti</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <!--run_depend>joint_state_publisher</run_depend-->
  <!--run_depend>robot_state_publisher</run_depend-->
  <!--run_depend>rviz</run_depend-->

  <!-- The export tag contains other, unspecified, tags -->
  <export>
  </export>
</package>
