<?xml version="1.0"?>
<package>
  <name>cartesian_planner</name>
  <version>0.0.0</version>
  <description>The cartesian_planner package</description>
  
  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="wyatt@todo.todo">wyatt</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://ros.org/wiki/jacobian_publisher</url> -->


  <!-- Author tags are optional, mutiple are allowed, one per tag -->
  <!-- Authors do not have to be maintianers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->


  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->

  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->

  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>baxter_trajectory_streamer</build_depend>
<build_depend>baxter_fk_ik</build_depend>
<build_depend>arm7dof_fk_ik</build_depend>
<build_depend>arm7dof_traj_as</build_depend>
<build_depend>ur_fk_ik</build_depend>
<build_depend>joint_space_planner</build_depend>
    <build_depend>simple_action_client</build_depend>
        <build_depend>message_generation</build_depend>
    <build_depend>actionlib</build_depend>
    <build_depend>tf</build_depend>
    <build_depend>xform_utils</build_depend>
    <build_depend>simple_baxter_gripper_interface</build_depend>

  <run_depend>roscpp</run_depend>
<run_depend>baxter_fk_ik</run_depend>
<run_depend>arm7dof_fk_ik</run_depend>
<run_depend>arm7dof_traj_as</run_depend>
<run_depend>ur_fk_ik</run_depend>
<run_depend>joint_space_planner</run_depend>
<run_depend>std_msgs</run_depend>
<run_depend>geometry_msgs</run_depend>
    <run_depend>actionlib</run_depend>
    <run_depend>simple_action_client</run_depend>
    <run_depend>message_runtime</run_depend>
    <run_depend>baxter_trajectory_streamer</run_depend>
<run_depend>tf</run_depend>
<run_depend>xform_utils</run_depend>
<run_depend>simple_baxter_gripper_interface</run_depend>
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
    
